--- a/part2/notes/package.json
+++ b/part2/notes/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "jsonsever": "npx json-server --port 3001 db.json"
+    "jsonserver": "npx json-server --port 3001 db.json"
   },
   "dependencies": {
     "axios": "^1.10.0",
