--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -13,6 +13,7 @@
   "author": "Okamissu",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.17.0"
   }
 }
